--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       ],
       "assets/*": [
         "src/assets/*"
+      ],
+      "components/*": [
+        "src/components/*"
       ]
     }
   }
